--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <!-- Main Battery Display -->
                 <section class="battery-display">
                     <div class="battery-circle">
-                        <svg class="progress-ring" viewBox="0 0 200 200">
-                            <circle class="progress-ring-bg" cx="100" cy="100" r="85" />
-                            <circle class="progress-ring-fill" cx="100" cy="100" r="85" />
+                        <svg class="progress-ring" viewBox="0 0 160 160">
+                            <circle class="progress-ring-bg" cx="80" cy="80" r="70" />
+                            <circle class="progress-ring-fill" cx="80" cy="80" r="70" />
                         </svg>
                         <div class="battery-info">
                             <div class="battery-percentage" id="batteryLevel">--</div>
@@ -38,7 +38,7 @@
                         <div class="stat-value" id="batteryHealth">--</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-label">Temperature</div>
+                        <div class="stat-label">Temp</div>
                         <div class="stat-value" id="batteryTemp">--</div>
                     </div>
                     <div class="stat-card">
@@ -46,7 +46,7 @@
                         <div class="stat-value" id="batteryVoltage">--</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-label">Time Remaining</div>
+                        <div class="stat-label">Time Left</div>
                         <div class="stat-value" id="timeRemaining">--</div>
                     </div>
                     <div class="stat-card">
@@ -54,7 +54,7 @@
                         <div class="stat-value" id="batteryCapacity">--</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-label">Discharge Rate</div>
+                        <div class="stat-label">Discharge</div>
                         <div class="stat-value" id="dischargeRate">--</div>
                     </div>
                 </section>
@@ -73,14 +73,13 @@
 
                 <!-- Tips Section -->
                 <section class="tips-section">
-                    <h2>Battery Tips</h2>
                     <div class="tip-card">
-                        <div class="tip-icon">⚡</div>
-                        <div class="tip-text">Charge between 20-80% for optimal battery health</div>
+                        <span class="tip-icon">⚡</span>
+                        <span class="tip-text">Charge 20-80%</span>
                     </div>
                     <div class="tip-card">
-                        <div class="tip-icon">🌡️</div>
-                        <div class="tip-text">Avoid extreme temperatures</div>
+                        <span class="tip-icon">🌡️</span>
+                        <span class="tip-text">Avoid extreme temps</span>
                     </div>
                 </section>
             </div>
